src/test/test-models/bad/compound-assign/plus_equals_bad_var_lhs2.stan
transformed data {
  real x;
}
generated quantities {
  real y;
  x += y;
}
